package org.example.Drift;

public interface AccionesCarrera {

    void validarInscripciones(Inscripcion inscripcion);
    void darSalida();
    void puntuar(Piloto piloto);

}
