package org.example.Drift;

public enum EstadoCoche {

    PENDIENTE, REVISADO, APTO, NO_APTO;

}
